schedule z-index issue, close schedule on mouse out

--- a/src/admin/resources/scss/components/_block.scss
+++ b/src/admin/resources/scss/components/_block.scss
@@ -85,7 +85,7 @@
     height: 36px;
     margin-top: -36px;
     transition: .2s ease-in-out opacity;
-    z-index: z-index(block-toolbar);
+    z-index: 1;
 
     .toolbar-item {
         border: none !important;
